# DroneCore

./: CMakeLists.txt
backend/src/: CMakeLists.txt
cmake/: compiler_flags.cmake
core/: CMakeLists.txt  mavlink_include.h  mavlink_system.cpp  mavlink_system.h  system.cpp  system.h
example/monitor/: CMakeLists.txt  monitor.cpp
example/offboard_velocity/: offboard_velocity.cpp
plugins/action/: action.cpp  action.h  action_impl.h
plugins/telemetry/: telemetry.cpp  telemetry.h  telemetry_impl.cpp  telemetry_impl.h
